Adding end to end test for chat compeletions tracing